# oidbt_bangumi_ani_getter

./: .gitignore  README.md  pyproject.toml  ruff.toml
oidbt_bangumi_ani_getter/: __init__.py  __main__.py  getter.py  log.py
