[build-system]
requires = [
    "setuptools>=82",
]

[project]
dynamic = ["version"]
name    = "oidbt_bangumi_ani_getter"
readme  = "README.md"
# license = "AGPL-3.0-or-later"
authors = [{ name = "op200" }]
classifiers = [
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "aiosqlite>=0.22.1",
    "easyrip>=4.16.1",
    "httpx[http2,socks,cli,brotli,zstd]>=0.28.1",
    "sqlmodel>=0.0.37",
]
requires-python = ">=3.14"

[project.urls]
Homepage = "https://github.com/OIDBT/oidbt_bangumi_ani_getter"
Source   = "https://github.com/OIDBT/oidbt_bangumi_ani_getter"

[tool.setuptools.dynamic]
version = { attr = "oidbt_bangumi_ani_getter.__version__" }

[tool.setuptools.package-dir]
oidbt_bangumi_ani_getter = "oidbt_bangumi_ani_getter"
